# inkapp

./: .gitignore  2026-02-06-ai-coding-war.html  2026-02-06-ai-coding-war.md  CLAUDE.md  README.md  batch_generate.py  com.weixin.aidaily.plist  config.env.example  daily_ai_news.py  prompt_template.txt  run.sh  video_analyzer.py  video_prompt_template.txt
.github/workflows/: build.yml
app/: index.html  package-lock.json  package.json
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  sidecar.rs
app/src/components/: ArticleActions.tsx  ArticleList.tsx  ArticlePreview.tsx  ArticleTemplates.tsx  FileUpload.tsx  GenerateProgress.tsx  HelpModal.tsx  ModeSelector.tsx  ModelCard.tsx  TemplateEditModal.tsx  WechatConfig.tsx
app/src/data/: model-guides.ts  prompt-templates.ts
app/src/hooks/: useConfig.ts  useConfig.tsx  useGenerate.tsx  useTemplates.ts
docs/: agent-architecture.md  design-spec.md  open-api.md  product-design.md  project-progress.md  tech-architecture.md  ui-layout.md  visual-standard.md  技术架构与产品化指南.md  核心竞争力与场景分析.md  模型适配层技术方案.md  项目进度总结.md
docs/plans/: 2026-02-16-product-design.md  2026-02-16-product-implementation.md
logo/: preview.html
logo/website/: site.webmanifest
prompts/: prompt_template.txt  topic_prompt_template.txt
scripts/: agent_loop.py  agent_prompts.py  batch_generate.py  build_sidecar.py  daily_ai_news.py  image_processor.py  ink_env.py  llm_adapter.py  requirements.txt  search_adapter.py  sidecar_main.py  translate_inplace.py  video_analyzer.py
(+8 files in other folders)
