[package]
name = "zhiqu-ai"
version = "0.1.0"
description = "Ink — 一句话开始你的创作"
authors = ["you"]
edition = "2021"

[lib]
name = "zhiqu_ai_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
