[package]
name = "ink"
version = "0.1.0"
description = "Ink — 一句话开始你的创作"
authors = ["you"]
edition = "2021"

[lib]
name = "ink_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
tauri-plugin-dialog = "2.6.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
